[tool.poetry]
name = "kv"
version = "0.4"
description = "KV provides a dictionary-like interface on top of SQLite."
authors = ["Alex Morega <alex@grep.ro>"]
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
